package node;

message MasterDataPacket {
  required int32 cmd = 1;
  optional int32 serverid = 2;
  optional string servername = 3;
  optional uint64 userid = 4;
  optional bytes data = 5;
  optional int32 result = 6;
}


